# Render-Workshop

./: .gitattributes  .gitignore  .gitmodules  BuildProject.bat  CMakeLists.txt  CleanProject.bat  README.md
ComputeSeminar/: CMakeLists.txt  ComputeSeminar.cpp  ComputeSeminarApp.cpp  ComputeSeminarApp.h
ComputeSeminar/Camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h
ComputeSeminar/Geometry/: Shapes.cpp  Shapes.h
ComputeSeminar/ImGui/: imgui_impl_render.h
ComputeSeminar/Noise/: Perlin.cpp  Perlin.h
ComputeSeminar/Shaders/: BallData.h  BallMovementCompute.hlsl  ClearIndirectDrawIndexed.hlsl  ImGui.hlsl  IndirectArguments.h  Mesh.hlsl  Samplers.h  Scene.h  ShapeMesh.hlsl  Terrain.hlsl  View.h
Game/: CMakeLists.txt
Game/Assets/: MeshAsset.cpp  MeshAsset.h
Game/Core/: GameApp.cpp  GameApp.h  WindowsPlatform.cpp  WindowsPlatform.h
Game/Entity/: Entity.cpp  Entity.h  EntityFragments.h
Game/Entity/Fragments/: CameraFragment.h  TransformFragment.h
Game/Input/: Input.cpp  Input.h
Game/Level/: Level.cpp  Level.h
Game/Object/: CameraComponent.cpp  CameraComponent.h  FlyControllerComponent.cpp  FlyControllerComponent.h  MeshComponent.h  Object.cpp  Object.h  ObjectComponent.cpp  ObjectComponent.h  RuntimeMeshComponent.cpp  RuntimeMeshComponent.h  SpatialObject.cpp  SpatialObject.h  SpatialObjectComponent.cpp  SpatialObjectComponent.h
Game/Rendering/: GameRenderer.cpp  GameRenderer.h  IRenderable.h  Materials.cpp  Materials.h  SpaceRenderer.cpp  SpaceRenderer.h
Game/Shaders/: BasicMaterial.hlsl  ShaderDefines.h
Game/Space/: Space.cpp  Space.h
Game/Utility/: Transform.h
HalfPipe/: CMakeLists.txt
HalfPipe/Source/Private/: HPModel.cpp  HPModelPipe.cpp  HPModelPipe.h  HPPipe.cpp  HPPipe.h  HPTexture.cpp  HPTexturePipe.cpp  HPTexturePipe.h  HPWfMtlLib.cpp  HPWfMtlLibPipe.cpp  HPWfMtlLibPipe.h  HalfPipe.cpp  MeshProcessing.cpp  WaveFrontReader.cpp
HalfPipe/Source/Public/: HPModel.h  HPTexture.h  HPWfMtlLib.h  HalfPipe.cpp  HalfPipe.h  ModelPipe.h  WaveFrontReader.h
HalfPipeApp/: CMakeLists.txt
HalfPipeApp/Source/Private/: HalfPipeApp.cpp
Include/: SurfClock.h  SurfMath.h
RaytracingDemo/: CMakeLists.txt
RaytracingDemo/Assets/: copyright.txt  house.mtl
RaytracingDemo/Shaders/: ClearUAV.hlsl  DebugView.hlsl  Deferred.hlsl  DeferredCommon.h  ExposureFusion.hlsl  Mesh.hlsl  RTShadows.hlsl  RenderToTexture.hlsl  ScreenPassShared.h  ScreenPassVS.hlsl  ShadowDenoiser.hlsl  ShadowTemporalRecombine.hlsl  Tonemapping.hlsl
RaytracingDemo/Source/: RTDGlobals.cpp  RTDGlobals.h  RTDModel.cpp  RTDModel.h  RaytracingDemo.cpp  RaytracingDemoApp.cpp  RaytracingDemoApp.h
RenderExample/: CMakeLists.txt  Main.cpp  RenderExample.cpp
RenderExample/Shaders/: Mesh.hlsl
RenderExampleImgui/: CMakeLists.txt  RenderExampleImgui.cpp  imgui_impl_render.cpp
RenderImgui/: CMakeLists.txt
RenderImgui/Source/Private/: imgui_impl_render.cpp
RenderImgui/Source/Public/: imgui_impl_render.h
RenderUtils/: CMakeLists.txt
RenderUtils/GPUContext/: GPUContext.cpp  GPUContext.h
RenderUtils/RenderPasses/: BloomRenderPass.cpp  BloomRenderPass.h  DisocclusionRenderPass.cpp  ScreenTracedAmbientOcclusion.cpp  ScreenTracedReflections.cpp  ScreenTracedReflections.h  SkyRenderPass.cpp
RenderUtils/Shaders/Bloom/: BloomApply.hlsl
RenderUtils/Shaders/Denoising/: GenerateDisocclusion.hlsl
RenderUtils/Shaders/STAO/: ScreenSpaceTracing.hlsl
RenderUtils/Shaders/STReflections/: STReflectionCombine.hlsl
RenderUtils/Shaders/ScreenTracing/: ScreenTracing.h
RenderUtils/Shaders/Util/: Macros.h  Random.h
Shared/: CMakeLists.txt
Shared/Assets/: AssetConfig.cpp  AssetConfig.h  Assets.cpp  Assets.h
Shared/Camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h
Shared/FileUtils/: FileLoader.cpp  FileLoader.h  FileStream.h  PathUtils.cpp  PathUtils.h
Shared/ImGui/: imgui_impl_render.cpp  imgui_impl_render.h
Shared/Logging/: Logging.cpp  Logging.h
Shared/Materials/: Materials.cpp  Materials.h
Shared/MeshProcessing/: MeshProcessing.cpp  MeshProcessing.h  WaveFrontReader.cpp  WaveFrontReader.h
Shared/ModelUtils/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  PlaneBuilder.cpp  PlaneBuilder.h  SphereBuilder.cpp  SphereBuilder.h
Shared/Noise/: Perlin.cpp  Perlin.h
Shared/Profiling/: ScopeTimer.cpp  ScopeTimer.h
Shared/RenderUtils/GPUContext/: GPUContext.cpp  GPUContext.h
Shared/RenderUtils/RenderGraph/: RenderGraph.cpp  RenderGraph.h
Shared/RenderUtils/RenderPasses/: BloomRenderPass.cpp  DisocclusionRenderPass.cpp  DisocclusionRenderPass.h  ScreenTracedAmbientOcclusion.cpp  ScreenTracedAmbientOcclusion.h  ScreenTracedReflections.cpp  ScreenTracedReflections.h  SkyRenderPass.cpp  SkyRenderPass.h
Shared/Shaders/Atmosphere/: SkySphere.hlsl
Shared/Shaders/Bloom/: BloomDownsample.hlsl  BloomUpsample.hlsl
Shared/Shaders/STAO/: ScreenSpaceTracing.hlsl
Shared/Shaders/STReflections/: STReflections.hlsl
Shared/Shaders/ScreenTracing/: ScreenTracing.h
Shared/Shaders/Util/: Transforms.h
Shared/StringUtils/: StringUtils.cpp  StringUtils.h
Shared/TextureUtils/: DDSTextureLoader.cpp  DDSTextureLoader.h  TextureManager.cpp  TextureManager.h
SimpleGame/: CMakeLists.txt
SimpleGame/Source/: SimpleGame.cpp  SimpleGameApp.cpp  SimpleGameApp.h
SimpleGame/Source/Levels/: SimpleLevel.cpp  SimpleLevel.h
