add_library(Shared
            "Assets/Assets.cpp"
            "Assets/Assets.h"
            "Camera/Camera.cpp"
            "Camera/Camera.h"
            "Camera/FlyCamera.cpp"
            "Camera/FlyCamera.h"
            "FileUtils/FileLoader.cpp"
            "FileUtils/FileLoader.h"
            "FileUtils/FileStream.cpp"
            "FileUtils/FileStream.h"
            "FileUtils/PathUtils.cpp"
            "FileUtils/PathUtils.h"
            "ImGui/Imgui_Impl_Render.cpp"
            "ImGui/Imgui_Impl_Render.h"
            "Logging/Logging.cpp"
            "Logging/Logging.h"
            "Materials/Materials.cpp"
            "Materials/Materials.h"
            "ModelUtils/ModelLoader.cpp"
            "ModelUtils/Model.cpp"
            "ModelUtils/Model.h"
            "ModelUtils/SphereBuilder.cpp"
            "ModelUtils/SphereBuilder.h"
            "Noise/Perlin.cpp"
            "Noise/Perlin.h"
            "Profiling/ScopeTimer.cpp"
            "Profiling/ScopeTimer.h"
            "RenderUtils/GPUContext/GPUContext.cpp"
            "RenderUtils/GPUContext/GPUContext.h"
            "RenderUtils/RenderPasses/ScreenTracedAmbientOcclusion.cpp"
            "RenderUtils/RenderPasses/ScreenTracedAmbientOcclusion.h"
            "RenderUtils/RenderPasses/ScreenTracedReflections.cpp"
            "RenderUtils/RenderPasses/ScreenTracedReflections.h"
            "RenderUtils/RenderPasses/SkyRenderPass.cpp"
            "RenderUtils/RenderPasses/SkyRenderPass.h"
            "RenderUtils/RenderGraph/RenderGraph.cpp"
            "RenderUtils/RenderGraph/RenderGraph.h"
            "StringUtils/StringUtils.cpp"
            "StringUtils/StringUtils.h"
            "TextureUtils/DDSTextureLoader.cpp"
            "TextureUtils/DDSTextureLoader.h"
            "TextureUtils/TextureManager.cpp"
            "TextureUtils/TextureManager.h"
)

set_target_properties(Shared PROPERTIES OUTPUT_NAME_DEBUG Shared_Debug)

target_include_directories(Shared
	PRIVATE 
    "${PROJECT_SOURCE_DIR}/imgui"
	"${PROJECT_SOURCE_DIR}/Include"
    "${PROJECT_SOURCE_DIR}/Render"
    "${PROJECT_SOURCE_DIR}/Shared"
	)